# DiligentEngineNET

./: .gitignore  DiligentEngineNET.sln  README.md  jakefile.js  package.json
.github/workflows/: _build-bindings.yml  _build-native.yml  _build_bindings.yml  _generate.yml  _publish.yml  build-native.yml  generate.yml  main.yml
BuildScripts/: BuildTasks.js  CiTasks.js  GenerateTasks.js  PackTasks.js  ProcessUtils.js  TestsTask.js
CodeGenerator/: CSharpCodeGenerator.cs  CodeChunk.cs  CodeGenerator.csproj  CppCodeGenerator.cs  ExclusionList.cs  ICodeGenerator.cs  Program.cs  Remapper.cs
CodeGenerator/CodeBuilders/: CSharpBuilder.cs  CppBuilder.cs
CodeGenerator/Utils/: AstUtils.cs  CSharpUtils.cs  CodeUtils.cs  CppTypeUtils.cs
DiligentCore/: ApiExtensionsInterop.cs  Constants.cs  DiligentCore.cs  DiligentCore.csproj  NativeObjectDestroyedException.cs  NativeObjectRegistry.cs  NativeWindow.cs
DiligentCore.TestRunner/: DiligentCore.TestRunner.csproj  Program.cs
DiligentCore.Tests/: BaseFactoryTest.cs  BasePipelineStateTest.cs  BaseRenderTest.cs  BufferTest.cs  DataBlobTest.cs  DearchiverTest.cs  DeviceContextTest.cs  DiligentCore.Tests.csproj  DiligentCoreTest.cs  DiligentObjectTest.cs  EngineFactoryD3D11Test.cs  EngineFactoryD3D12Test.cs  EngineFactoryOpenGlTest.cs  EngineFactoryTest.cs  EngineFactoryVkTest.cs  FileStreamTest.cs  GraphicsPipelineStateTest.cs  Program.cs  ResourceMappingTest.cs  SamplerTest.cs  ShaderResourceBindingTest.cs  ShaderSourceInputStreamFactoryTest.cs  ShaderTest.cs  SwapChainTest.cs  TextureTest.cs
DiligentCore.Tests/Properties/: launchSettings.json
DiligentCore.Tests/Structs/: BindSparseResourceMemoryAttribsTest.cs  EngineD3D12CreateInfoTest.cs  RenderPassDescTest.cs
DiligentCore.Tests/Theories/: UnmanagedTest.cs
DiligentCore.Tests/Utils/: DebugOutput.cs  SystemUtils.cs  TestWindow.cs
DiligentCore/Implementations/: BottomLevelASImpl.cs  BufferImpl.cs  BufferViewImpl.cs  CommandListImpl.cs  CommandQueueImpl.cs  DataBlobImpl.cs  DearchiverImpl.cs  DeviceContextImpl.cs  DeviceMemoryImpl.cs  DeviceObjectImpl.cs  DiligentObjectImpl.cs  DisplayModeAttribsImpl.cs  EngineFactoryD3D11Impl.cs  EngineFactoryD3D12Impl.cs  EngineFactoryImpl.cs  EngineFactoryOpenGLImpl.cs  EngineFactoryVkImpl.cs  FenceImpl.cs  FileStreamImpl.cs  FramebufferImpl.cs  GraphicsAdapterInfoImpl.cs  HLSLGLSL2ConverterImpl.cs  NativeObject.cs  PipelineResourceSignatureImpl.cs  PipelineStateCacheImpl.cs  PipelineStateImpl.cs  QueryImpl.cs  ReferenceCountersImpl.cs  RenderDeviceImpl.cs  RenderPassImpl.cs  ShaderImpl.cs  (+12 more)
DiligentCoreGlue/: Api.h  ApiExtensions.cpp  CMakeLists.txt  EngineFactoryExtensions.cpp  Factories.cpp  TestUtils.cpp  WindowHandle.h
(+103 files in other folders)
